deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestor-app
  labels:
    app: gestor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestor
  template:
    metadata:
      labels:
        app: gestor
    spec:
      containers:
      - name: gestor
        image: gestor:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1009490000  # Changed from 1001 to an allowed value
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: "RuntimeDefault"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestor-backend
  labels:
    app: gestor-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestor-backend
  template:
    metadata:
      labels:
        app: gestor-backend
    spec:
      containers:
      - name: backend
        image: gestor-backend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1009490000  # Changed from 1001 to an allowed value
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: "RuntimeDefault"
---
apiVersion: v1
kind: Service
metadata:
  name: gestor-service
spec:
  selector:
    app: gestor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gestor-backend-service
spec:
  selector:
    app: gestor-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gestor-route
spec:
  to:
    kind: Service
    name: gestor-service
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gestor-backend-route
spec:
  to:
    kind: Service
    name: gestor-backend-service
  port:
    targetPort: 3000
